--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
     
     # Checkout code
-    - uses: actions/checkout@main
+    - uses: actions/checkout@v2
     
     # Log into Azure
     - uses: azure/login@v1
@@ -19,5 +19,5 @@ jobs:
       with:
         subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
         resourceGroupName: ${{ secrets.AZURE_RG }}
-        template: ./deploy-storaceaccount.bicep
-        parameters: ./deploy-storageaccount-parameters-dev.json
+        template: ./Infrastructure/deploy-storaceaccount.bicep
+        parameters: ./Infrastructure/deploy-storageaccount-parameters-dev.json
