--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -6,7 +6,10 @@ jobs:
     steps:
     
     # Checkout code
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@main
+    - name: Dir Files
+      run: |
+        dir
     
     # Log into Azure
     - uses: azure/login@v1
