--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -10,6 +10,8 @@ jobs:
     - name: Dir Files
       run: |
         dir
+        cd infrastructure
+        dir
     
     # Log into Azure
     - uses: azure/login@v1
