--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -7,11 +7,12 @@ jobs:
     
     # Checkout code
     - uses: actions/checkout@main
+    - name: Setup Working Dir
+      working-directory: ./
     - name: Dir Files
       run: |
         dir
-        cd infrastructure
-        dir
+        
     
     # Log into Azure
     - uses: azure/login@v1
